2008-02-04  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfileinputstream.c:
        * client/gdaemonfileoutputstream.c:
	Init seq_nr to 1 so that seq_nr 0 is special
	(used for e.g. readahead ops)
	
        * daemon/gvfschannel.[ch]:
        * daemon/gvfsreadchannel.c:
	Implement readahead.

2008-02-03  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	* daemon/gvfsbackendhttp.c:
	Move write logic (replace, create) to the dav backend.

2008-02-01  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsreadchannel.c:
	Request larger buffers than the client requested
	so for better network efficiency. (#512472)

2008-02-01  Alexander Larsson  <alexl@redhat.com>

        * programs/gvfs-open.c:
	Pass on uris unmodified to avoid roundtripping
	through GFile which can be destructive.

2008-01-31  Alexander Larsson  <alexl@redhat.com>

	Implement uri navigation for http uris (#509341)
	
        * client/gvfsurimapper.[ch]:
        Add get_mount_info_for_path method for mount types
	like ssh that change MountInfo as the path changes.
	
        * client/httpuri.c:
	Implement get_mount_info_for_path.
	For http, set the path from the uri.
	The will be removed on i/o by the corresponding
	path being in the mount_prefix.
	
        * daemon/gvfsbackendhttp.c:
	Set mount_prefix to path from uri.
	Remove unused code in message_new_from_filename

        * client/gdaemonfile.c:
        * client/gdaemonvfs.[ch]:
	Use the new uri mapper function to change GMountInfo
	as the path changes.
	
2008-01-31  Alexander Larsson  <alexl@redhat.com>

        * common/gmountspec.[ch]:
        Add shared path canonicalization:
	g_mount_spec_canonicalize_path()

2008-01-31  Alexander Larsson  <alexl@redhat.com>

	* daemon/soup-input-stream.c:
	Handle errors in send_finish.

2008-01-30  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendlocaltest.c:
	Use read/write operations instead of do_copy ()

2008-01-30  Alexander Larsson  <alexl@redhat.com>
