@@ -107,9 +107,8 @@ typedef struct {
 #define G_VFS_DAEMON_SOCKET_PROTOCOL_REQUEST_WRITE 1
 #define G_VFS_DAEMON_SOCKET_PROTOCOL_REQUEST_CLOSE 2
 #define G_VFS_DAEMON_SOCKET_PROTOCOL_REQUEST_CANCEL 3
-#define G_VFS_DAEMON_SOCKET_PROTOCOL_REQUEST_SEEK_CUR 4
-#define G_VFS_DAEMON_SOCKET_PROTOCOL_REQUEST_SEEK_SET 5
-#define G_VFS_DAEMON_SOCKET_PROTOCOL_REQUEST_SEEK_END 6
+#define G_VFS_DAEMON_SOCKET_PROTOCOL_REQUEST_SEEK_SET 4
+#define G_VFS_DAEMON_SOCKET_PROTOCOL_REQUEST_SEEK_END 5
 
 /*
 read, readahead reply:
